# yolo-cpu-detect-api

./: .gitattributes  CHANGELOG.md  CLAUDE.md  Makefile  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
code/: .dockerignore  .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE-STATUS.md  Makefile  README.md  pyproject.toml  strategic_model_init_material.md
code/.github/: pull_request_template.md
code/deployment/: README.md
code/docs/: 00-project-charter.md  01-product-requirements.md  02-non-goals.md  04-openai-compatibility.md  05-api-contract.md  07-test-and-validation.md  08-benchmark-method.md  10-work-plan.md  11-release-readiness.md  12-decision-log.md  13-licensing-and-model-policy.md  14-project-handoff.md  15-references.md
code/models/: README.md
code/scripts/: verify_initial_repository.py
doc/: OAP Quickstart_ First Run in WSL2 (EN).html  OAP Quickstart_ Prvi zagon v WSL2 (SLO).html  Orchestrated Agentic Programming Manual (EN).html  Priročnik za orkestrirano agentno programiranje (SLO).html
doc/OAP Quickstart_ Prvi zagon v WSL2 (SLO)_files/: 0kbrdb1b3h3md.js.download  turbopack-0auym-4z41bdt.js.download
doc/Orchestrated Agentic Programming Manual (EN)_files/: 01i74vw8t0~9x.css  143rq-j0yw08i.js.download
doc/Priročnik za orkestrirano agentno programiranje (SLO)_files/: 06cio4_oemo5-.js.download  0pbz2bkyi7jf2.js.download  14fqj67zc_uvq.js.download
docs/: 03-architecture.md  06-security.md  07-test-and-validation.md  09-operations-runbook.md
scripts/: README.md  verify_initial_repository.py
tests/: test_package_smoke.py  test_project_contract.py
(+12 files in other folders)
